--- a/colores.css
+++ b/colores.css
@@ -12,3 +12,17 @@ header img {
     width: 50px;
     height: auto;
 }
+
+h5 {
+    font-weight: bold;
+}
+
+.card img {
+    object-fit: cover;
+    width: 100%;
+    height: auto;
+}
+
+.card{
+    border-color: beige;
+}
